# gestures4kivy

./: README.md  setup.cfg  setup.py  setup.py~
gestures4kivy/: __init__.py  commongestures.py
src/gestures4kivy/: commongestures.py
