[metadata]
name = gestures4kivy
version = 0.0.6
author = Robert Flatt
description = Detect common touch gestures in Kivy apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Android-for-Python/gestures4kivy
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src